--- a/package.json
+++ b/package.json
@@ -8,18 +8,31 @@
     "build": "vite build",
     "preview": "vite preview",
     "serve": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,css,md,json}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,css,md,json}\"",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
+    "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/typography": "^0.5.16",
+    "antd": "^5.26.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "flowbite-react": "^0.11.9",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "6.0.2",
     "recharts": "^2.15.2",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
