--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-image-magnify": "^2.7.4",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "6.0.2",
     "recharts": "^2.15.2",
